# axum-template

./: .gitignore  Cargo.toml  README.md  config.toml
server/: Cargo.toml
server/src/: lib.rs  main.rs
server/src/api/user/: mod.rs
server/src/auth/: jwt.rs
server/src/config/: jwt.rs  mod.rs  server.rs
server/src/router/: mod.rs  user.rs
src/: lib.rs
src/config/: jwt.rs  logger.rs  mod.rs  server.rs
src/database/: mod.rs  postgres.rs
src/middleware/: jwt.rs  logger.rs  mod.rs
src/middleware/interceptor/: blacklist.rs  cors.rs  download.rs  mod.rs
src/tools/: macros.rs  mod.rs  multipart.rs  resp.rs  unit.rs  validate.rs
src/tools/compare/: mod.rs  str.rs
src/tools/validator/: cors.rs  mod.rs
static/: 404.html
